# infolegAI

./: .gitignore  README.md
dataset/: .env.example  Dockerfile  justfile  pyproject.toml
dataset/src/dataset/: definitions.py  gcs_bucket_resource.py  infoleg_scraper.py
dataset/src/dataset/defs/: assets.py
website/: .env.example  Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  env.example  justfile  pyproject.toml
website/app/: db.py  logging_conf.py  main.py  models.py
website/app/api/: router.py
website/app/api/routes/: analytics.py  auth.py  chat.py  conversations.py  documents.py  health.py
website/app/core/: agent.py  auth.py  config.py  document.py  mcp.py  tools.py
website/app/middleware/: wide_logging.py
website/frontend/: package-lock.json  package.json
website/frontend/src/: App.tsx  index.css
website/frontend/src/components/: Layout.tsx
website/frontend/src/components/ui/: message.tsx  sidebar.tsx
website/frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
website/frontend/src/pages/: AnalyticsPage.tsx  AuthCallback.tsx  ChatPage.tsx  DocumentsPage.tsx
website/src/: agent.py  config.py  main.py  mcp.py  routes.py  tools.py  tracking.py
website/templates/: base.html  index.html  signup.html
