[project]
name = "ragboletin"
version = "0.1.0"
dependencies = [
    "fastapi",
    "jinja2",
    "uvicorn[standard]",
    "python-multipart",
    "langchain",
    "langsmith",
    "python-dotenv",
    "google-cloud-bigquery",
    "langchain-google-genai",
    "langchain-google-vertexai",
    "langchain-google-community[featurestore]>=3.0.0",
    "mcp>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]
